--- a/coin/views/index.html
+++ b/coin/views/index.html
@@ -13,8 +13,10 @@
 
 <body>
 	<button id="selectBtn">보유 자산 수동 조회</button>
+	<button id="classifyBtn">기능 테스트 버튼</button>
 	<pre id="container"></pre>
 	<pre id="testContainer"></pre>
+	<div id="scriptContainer"></div>
 </body>
 <script type="text/javascript" src="../resources/plugins/jquery/jquery-3.3.1.js"></script>
 <script type="text/javascript" src="../resources/plugins/websocket/sockjs.min.js"></script>
