--- a/coin/resources/css/index.css
+++ b/coin/resources/css/index.css
@@ -1,67 +1,136 @@
 @charset "utf-8";
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-size: 13px;
-    line-height: 1.4;
-}
-img {
-    width: 100%;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-family: "Roboto", sans-serif;
+  font-size: 13px;
+  text-decoration: none;
+  line-height: 1.4;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: none;
+  -moz-text-size-adjust: none;
+  -ms-text-size-adjust: none;
+  -webkit-tap-highlight-color: transparent;
+  text-rendering: optimizelegibility;
 }
 a {
-    text-decoration: none;
-    outline: 0;
+  text-decoration: none;
+  outline: 0;
+}
+
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+ul,
+ol,
+li {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+blockquote,
+q {
+  quotes: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  border-style: hidden;
+  border: none;
+  width: 100%;
+}
+td,
+th {
+  border: none;
+}
+form,
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+}
+button:focus {
+  outline: none;
+}
+a:hover {
+  color: #666666;
+  text-decoration: none;
+}
+a:visited,
+a:link {
+  color: inherit;
+  text-decoration: none;
+}
+img,
+fieldset {
+  border: 0 none;
+}
+img {
+  vertical-align: middle;
+  width: 100%;
+}
+input,
+select,
+textarea,
+button {
+  vertical-align: middle;
+}
+address,
+cite,
+code,
+dfn,
+em,
+i,
+var,
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-weight: normal;
+}
+mark,
+span {
+  font: inherit;
+}
+bold {
+  font-weight: 900;
 }
 
 /* width */
 ::-webkit-scrollbar {
-    width: 3px;
+  width: 3px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey;
-    border-radius: 10px;
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #ffffff;
-    border-radius: 10px;
-}
-
-.log-toggle_button {
-    position: fixed;
-    right: 2vh;
-    cursor: pointer;
-    border: 1px solid;
-    padding: 6px 16px;
-}
-
-#scriptContainer {
-    font-family: monospace,monospace;
-    color: #ffffff;
-    padding: 1.4rem 1.2rem;
-    overflow-y: auto;
-    background: #121619;
-    z-index: 100;
-    height: 40vh;
-    border-top: 14px solid #000000;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
-    left: 0;
-    transition: height 0.2s ease-in-out;
-    /* height: 10vh; */
-}
-#scriptContainer.log_close {
-    height: 10vh;
-}
-#scriptContainer .log_write{
-    color: white;
-    white-space: break-spaces;
-    word-break: break-all;
-    padding: 2px 0;
+  background: #ffffff;
+  border-radius: 10px;
 }
