--- a/coin/resources/css/style.css
+++ b/coin/resources/css/style.css
@@ -1,92 +1,126 @@
 @charset "utf-8";
 
+.log-toggle_button {
+  position: fixed;
+  right: 2vh;
+  cursor: pointer;
+  border: 1px solid;
+  padding: 6px 16px;
+}
+
+#scriptContainer {
+  font-family: monospace, monospace;
+  color: #ffffff;
+  padding: 1.4rem 1.2rem;
+  overflow-y: auto;
+  background: #121619;
+  z-index: 100;
+  height: 40vh;
+  border-top: 14px solid #000000;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  transition: height 0.2s ease-in-out;
+  /* height: 10vh; */
+}
+#scriptContainer.log_close {
+  height: 10vh;
+}
+#scriptContainer .log_write {
+  color: white;
+  white-space: break-spaces;
+  word-break: break-all;
+  padding: 2px 0;
+}
+
 .round_button {
-    width: auto;
-    margin: auto;
-    padding: 4px 22px;
-    transition: opacity .2s ease;
-    border: none;
-    outline: none;
-    cursor: pointer;
+  width: auto;
+  margin: auto;
+  padding: 4px 22px;
+  transition: opacity 0.2s ease;
+  border: none;
+  outline: none;
+  cursor: pointer;
 }
 .round_button.buy {
-    color: #ffffff;
-    background-color: #bd1818;
+  color: #ffffff;
+  background-color: #bd1818;
 }
 .round_button.sell {
-    color: #fff;
-    background-color: #203992;
+  color: #fff;
+  background-color: #203992;
 }
 
 .log_buy {
-    background-color: #bd1818;
-    padding: 3px;
-    font-weight: 900;
-    font-size: 0.9rem;
+  background-color: #bd1818;
+  padding: 3px;
+  font-weight: 900;
+  font-size: 0.9rem;
 }
 .log_sell {
-    background-color: #203992;
-    padding: 3px;
-    font-weight: 900;
-    font-size: 0.9rem;
+  background-color: #203992;
+  padding: 3px;
+  font-weight: 900;
+  font-size: 0.9rem;
 }
 
 .cryptos {
-    display: flex;
-    width: 100%;
-    /* max-width: 1440px; */
-    margin: 0 auto;
-    flex-direction: row;
-    flex-wrap: wrap;
+  display: flex;
+  width: 100%;
+  /* max-width: 1440px; */
+  margin: 0 auto;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 .crypto {
-    width: calc(100% / 7);
-    background-color: #152229;
-    padding: 0.6rem;
-    /* margin: 2px; */
-    border-right: 1px solid rgba(183, 183, 183, 0.5);
-    border-bottom: 1px solid rgba(183, 183, 183, 0.5);
+  width: calc(100% / 7);
+  background-color: #152229;
+  padding: 0.6rem;
+  /* margin: 2px; */
+  border-right: 1px solid rgba(183, 183, 183, 0.5);
+  border-bottom: 1px solid rgba(183, 183, 183, 0.5);
 }
 .crypto h4 {
-    font-size: 1.2rem;
-    font-weight: 900;
-    padding: 4px 4px 6px;
-    color: #ffffff;
-    border-bottom: 1px solid rgba(183, 183, 183, 0.2)
+  font-size: 1.2rem;
+  font-weight: 900;
+  padding: 4px 4px 6px;
+  color: #ffffff;
+  border-bottom: 1px solid rgba(183, 183, 183, 0.2);
 }
 .crypto .sell_type {
-    color: #ffffff;
-    font-size: 0.9rem;
-    display: flex;
-    align-items: center;
-    padding: 10px 4px;
+  color: #ffffff;
+  font-size: 0.9rem;
+  display: flex;
+  align-items: center;
+  padding: 10px 4px;
 }
 .crypto .sell_type input[type="radio"] {
-    margin-right: 4px;
+  margin-right: 4px;
 }
 .crypto .amount {
-    padding: 6px 4px;
+  padding: 6px 4px;
 }
 .crypto .amount dl {
-    display: flex;
-    color: #ffffff;
-    position: relative;
-    align-items: center;
-    flex-direction: row;
-    flex-wrap: wrap;
+  display: flex;
+  color: #ffffff;
+  position: relative;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 .crypto .amount dt {
-    font-size: 0.875rem;
-    opacity: 0.9;
-    width: 40%;
+  font-size: 0.875rem;
+  opacity: 0.9;
+  width: 40%;
 }
 .crypto .amount dd {
-    font-weight: 900;
-    font-size: 1.1rem;
-    width: 60%;
-    text-align: right;
+  font-weight: 900;
+  font-size: 1.1rem;
+  width: 60%;
+  text-align: right;
 }
 .crypto .amount dt,
 .crypto .amount dd {
-    padding: 2px;
+  padding: 2px;
 }
