--- a/coin/views/index.html
+++ b/coin/views/index.html
@@ -15,9 +15,9 @@
 <body>
 	<div id="content">
 		<div id="cryptos" class="cryptos"></div>
-		
 		<button id="selectBtn">보유 자산 수동 조회</button>
 		<button id="classifyBtn">기능 테스트 버튼</button>
+		<button id="waitBtn">미체결 테스트 버튼</button>
 		<div id="container"></div>
 		<div id="testContainer"></div>
 		<div id="scriptContainer">
@@ -34,5 +34,6 @@
 <script type="text/javascript" src="../resources/js/n_socket.js"></script>
 <script type="text/javascript" src="../resources/js/u_socket.js"></script>
 <script type="text/javascript" src="../resources/js/index.js"></script>
+<script type="text/javascript" src="../resources/js/promise.js"></script>
 
 </html>
