--- a/coin/resources/css/index.css
+++ b/coin/resources/css/index.css
@@ -1,11 +1,11 @@
 @charset "utf-8";
-
+@import url("https://fonts.googleapis.com/css2?family=Russo+One&family=Source+Sans+Pro:wght@200;300;400;700;900&display=swap");
 * {
   margin: 0;
   padding: 0;
   border: 0;
-  font-family: "Roboto", sans-serif;
-  font-size: 13px;
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 14px;
   text-decoration: none;
   line-height: 1.4;
   -webkit-box-sizing: border-box;
@@ -17,6 +17,9 @@
   -ms-text-size-adjust: none;
   -webkit-tap-highlight-color: transparent;
   text-rendering: optimizelegibility;
+}
+body {
+  overflow-x: hidden;
 }
 a {
   text-decoration: none;
@@ -113,6 +116,7 @@ h5 {
 mark,
 span {
   font: inherit;
+  color: inherit;
 }
 bold {
   font-weight: 900;
@@ -133,4 +137,24 @@ bold {
 ::-webkit-scrollbar-thumb {
   background: #ffffff;
   border-radius: 10px;
+}
+
+::-webkit-scrollbar {
+  width: 3px;
+}
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #666666;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+::-webkit-scrollbar-button:start:decrement,
+::-webkit-scrollbar-button:end:increment {
+  width: 3px;
+  height: 3px;
+  background: #f1ef79;
 }
