--- a/coin/resources/css/mobile.css
+++ b/coin/resources/css/mobile.css
@@ -28,6 +28,12 @@ body {
   width: 100vw;
   height: 100vh;
 }
+.flex {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
 #moblie_wrap {
   margin: 0 auto;
   width: 100vw;
@@ -151,4 +157,10 @@ section {
   opacity: 0.7;
   font-size: 0.7rem;
   padding-top: 0.15rem;
+}
+#totalKRW, #totalAssets {
+  opacity: 0.5;
+  letter-spacing: 0;
+  color: #b3b3b3;
+  font-size: 1.3rem;
 }
