--- a/coin/views/mobile_main.html
+++ b/coin/views/mobile_main.html
@@ -29,11 +29,18 @@
 		<section class="assets-info_total">
 			<p>Total Assets (KRW)</p>
 			<div id="totalAssetsMoney"></div>
+			<div class="flex" style="justify-content: space-evenly;padding: 8px 0;">
+				<div id="totalKRW"></div>
+				<div id="totalAssets"></div>
+			</div>
 		</section>
 
 		<section class="assets-crypto">
 			<h4 class="section-title">Assets Crypto</h4>
+			<p style="padding: 0 2%;">own coin</p>
 			<div class="assets-crypto_lists"></div>
+			<hr style="height: 2px;background-color: rgb(255 255 255 / 20%);width: 30%;margin: 30px auto;" />
+			<p style="padding: 0 2%;">Not mine yet</p>
 		</section>
 
 		<div id="underBlock" style="height: 50px;"></div>
