--- a/coin/views/mobile_diary.html
+++ b/coin/views/mobile_diary.html
@@ -46,8 +46,8 @@
 		<div id="underBlock" style="height: 50px;"></div>
 
 		<nav class="navigator">
-			<div class="item selected">
-				<a href="#"><i class="fab fa-google-wallet"></i></a>
+			<div class="item">
+				<a href="/m/wallet"><i class="fab fa-google-wallet"></i></a>
 			</div>
 			<div class="item">
 				<a href="#"><i class="fas fa-exchange-alt"></i></a>
@@ -55,8 +55,8 @@
 			<div class="item">
 				<a href="#"><i class="fas fa-chart-pie"></i></a>
 			</div>
-			<div class="item">
-				<a href="/m/diary"><i class="fas fa-smile"></i></a>
+			<div class="item selected">
+				<a href="#"><i class="fas fa-smile"></i></a>
 			</div>
 		</nav>
 	</div>
