가공 데이터 추가

--- a/coin/views/index.html
+++ b/coin/views/index.html
@@ -35,5 +35,5 @@
 <script type="text/javascript" src="../resources/js/u_socket.js"></script>
 <script type="text/javascript" src="../resources/js/index.js"></script>
 <script type="text/javascript" src="../resources/js/promise.js"></script>
-
+<script type="text/javascript" src="../resources/js/tradingCoinBot.js"></script>
 </html>
