--- a/coin/views/index.html
+++ b/coin/views/index.html
@@ -15,9 +15,9 @@
 <body>
 	<div id="content">
 		<div id="cryptos" class="cryptos"></div>
-		<button id="selectBtn">보유 자산 수동 조회</button>
-		<button id="classifyBtn">기능 테스트 버튼</button>
-		<button id="waitBtn">미체결 테스트 버튼</button>
+		<button id="selectBtn" class="round_button">보유 자산 수동 조회</button>
+		<button id="classifyBtn" class="round_button">기능 테스트 버튼</button>
+		<button id="waitBtn" class="round_button">미체결 테스트 버튼</button>
 		<div id="container"></div>
 		<div id="testContainer"></div>
 		<div id="scriptContainer">
